zcheck (head builder tool to check balancing)
mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj is loaded)
Auto Toggles (loot, goold, split, sac, assist, map)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)t
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
[Sep 01 2008] - Fizban
  Added a check to mzoneecho to stop mortals from using it.
[Aug 31 2008] - Fizban
  Removed various mid-function defines of variables.
[Aug 27 2008] - Rumble
  Fixed Mob using '((c)->player_specials->saved.pref)' at dg_variables.c:860
tbaMUD-3.57
[Aug 11 2008] - Rumble
  Updated World and files for 3.57 release. 
[Aug 10 2008] - Fizban
  Added sanity checks to zedit new. (Can no longer make zones that include negative vnums, also get the proper message when you have 3 of the 4 arguments.)
  You can now put objects in and remove objects from closed containers as an imm with nohassle.
  You can now walk through closed doors as an imm with nohassle on.
  You can now open locked containers and doors without unlocking them as an immortal with nohassle.
  You can now examine the contents of closed containers as an imm with nohassle.
  Made zedit new added the .qst file to the index file.
  Fixed various qedit related bugs. (thanks Mirad and Jamdog)
  Removed deprecated "murder" code.
  When pkill is on players can now order charmed mobs to attack other players.
  Fixed 'toggle automap'.
  Added a sacrifice command instead of their being autosac only. Also replaced Zizazat's name with more generic "The Gods" as it had obviously been ported from CWG previously.
  Fixed Warning relating to Automap.
[Aug 03 2008] - Rumble
  You can now see your own communications while sleeping for gos, auc, gra, etc. (thanks Drefs)
  changed str_and_map to use target_room instead of IN_ROOM(ch). (thanks Vatiken)
[Aug 02 2008] - Welcor